add documentation auth
